--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -37,7 +37,7 @@ about.dialog.documentation=Documentatie
 about.dialog.general_information=Algemene Informatie
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professioneel folder deel programma
-##about.dialog.send_bug_report=Send Bug Report
+about.dialog.send_bug_report=Verzend debug verslag
 about.dialog.support=Ondersteuning
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -64,8 +64,8 @@ addmodifierfriend.description=Voeg bewerker van bestand toe aan vriendenlijst
 addmodifierfriend.key=f
 addmodifierfriend.name=Maak bewerker vriend
 
-##addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, valid inputs are\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
-##addressEditor.title=IP-Range
+addressEditor.parseerror=<html>Geef de IPs in die op het LAN zitten, geldige ingave\:<br>xxx.xxx.xxx.xxx of<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
+addressEditor.title=IP-Reeks
 
 chatpanel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
 chatpanel.chat_with=Chat met
@@ -109,14 +109,14 @@ dialog.addmembertofriendlist.explain=(Door iemand aan uw vriendenlijst toe te vo
 dialog.addmembertofriendlist.question={0} werd lid van een of meer folder(s)\:\n\n{1}\nwilt u hem aan uw vriendenlijst toevoegen?
 dialog.addmembertofriendlist.title=Voeg {0} toe aan vriendenlijst
 dialog.alreadyrunning.exitbutton=Afsluiten
-##dialog.alreadyrunning.startbutton=Start anyways
+dialog.alreadyrunning.startbutton=Start geforceerd
 dialog.alreadyrunning.title=al gestart
 dialog.alreadyrunning.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
-##dialog.binderror=Unable to bind port\!
+dialog.binderror=Niet instaat om een port te verbinden\!
 dialog.connect.connecting=Verbinden
 dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindingsprobleem
-##dialog.fatalerror.title=Fatal Error
+dialog.fatalerror.title=Fatale Fout
 dialog.synchronization.choose=Kies uw sync actie op
 dialog.synchronization.receive_changes=Ontvang veranderingen
 dialog.synchronization.send_and_receive_changes=Verzend en ontvang veranderingen
@@ -198,27 +198,27 @@ filelist.status.no_files_available_add_files_and_invite=Geen bestanden beschikba
 filelist.status.no_files_available_add_files_in_folder=Geen bestanden beschikbaar... Voeg bestanden toe aan uw lokale map om ze te delen of te synchronizeren
 filelist.status.no_files_available_yet_fetching_filelist=Nog geen bestanden beschikbaar... bezig bestanden lijsten op te halen
 
-##filenameproblem.dialog.add_to_ignore=Add to ignore
-##filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
-##filenameproblem.dialog.automatic_rename=Automatic rename
-##filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
-##filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
-##filenameproblem.dialog.do_nothing=Do nothing
-##filenameproblem.dialog.never_ask_this_again=Never ask this again
-##filenameproblem.dialog.solution=Solution
-##filenameproblem.dialog.title=Filename problem(s) detected
-##filenameproblem.duplicate=Duplicate filename found (with different case)
-##filenameproblem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
-##filenameproblem.ends_with_illegal_char=The filename ends with characters that are not recommended
-##filenameproblem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
-##filenameproblem.not_recommended_chars=The filename contains characters that are not recommended
-##filenameproblem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
-##filenameproblem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
-##filenameproblem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "controll" characters (ASCII code 0 till 31)\nare not allowed on those computers
-##filenameproblem.reserved_filename=The filename is a reserved filename on Windows
-##filenameproblem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
-##filenameproblem.to_long=The filename is to long
-##filenameproblem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
+filenameproblem.dialog.add_to_ignore=Voeg toe aan negeren
+filenameproblem.dialog.add_to_ignore.explained=Voeg dit bestand toe aan de lijst van bestanden die uitgezonderd worden van delen
+filenameproblem.dialog.automatic_rename=Automatisch hernoemen
+filenameproblem.dialog.automatic_rename.explained=Verwijder ongeldige karakters en of voegt "-1" toe, of vergelijkbare oplossingen om een geldige (unieke) bestands naam te maken
+filenameproblem.dialog.description=Bestandsnaam probleem gevonden, selecteer voor elk bestand een oplossing
+filenameproblem.dialog.do_nothing=Doe niets
+filenameproblem.dialog.never_ask_this_again=Nooit meer vragen
+filenameproblem.dialog.solution=Oplossing
+filenameproblem.dialog.title=Bestandsnaam probleem gevonden
+filenameproblem.duplicate=Dubbele bestandnaam gevonden (met verschil in hoofd/kleine letters)
+filenameproblem.duplicate.description=Een bestandnaam met dezelfde naam is gevonden maar verschild alleen in hoofd en kleine letters\:\n{0}\nDit zorgd voor problemen op Windows computers
+filenameproblem.ends_with_illegal_char=De bestandnaam eindigd met karakters die niet aan te raden zijn
+filenameproblem.ends_with_illegal_char.description=De bestandnaam eindigd met karakters die waarschijnlijk problemen veroorzaken op Windows computers.\nDe karakters . en spatie ( ) zijn niet toegestaan als de laatste karakters op die computers.
+filenameproblem.not_recommended_chars=De bestandsnaam bevat karakters die niet aan te raden zijn
+filenameproblem.not_recommended_chars_linux.description=De bestandnaam bevat karakters die problemen geven op Unix/Linux computers.\nHet karakter / is niet toegestaan op die computers
+filenameproblem.not_recommended_chars_mac_osx.description=De bestandnaam bevat karakters die problemen geven op Mac OSX computers.\nDe karakters / en \: zijn niet toegestaan op die computers
+filenameproblem.not_recommended_chars_windows.description=De bestandnaam bevat karakters die problemen geven op Windows computers.\nDe karakters |\\?*<"\:>/  en  "control" karakters (ASCII code 0 tot 31)\nzijn niet toegestaan op die computers.
+filenameproblem.reserved_filename=De bestandsnaam is een reserveerde bestandsnaam op Windows
+filenameproblem.reserved_filename.description=De bestandsnaam is een reserveerde bestandsnaam op Windows,\nhet is niet aan te raden deze bestandnamen te gebruiken op windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, en LPT9
+filenameproblem.to_long=De bestandnaam is te lang
+filenameproblem.to_long.description=De bestandnaam is langer als 255 karakters,\nHet is bekend dat dit problemen geeft op Windows, Mac OSX en Unix/Linux computers
 
 findfriends.description=Start zoeken naar nieuwe vrienden
 findfriends.key=V
@@ -283,7 +283,7 @@ folderleave.dialog.title=Stop delen van Folder {0} ?
 folderleave.key=V
 folderleave.name=Verlaat folder
 
-##folderpanel.chattab.title=Chat
+folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
 folderpanel.filestab.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
@@ -339,8 +339,8 @@ general.availability=Beschikbaarheid
 general.cancel=Annuleren
 general.cancel.key=A 
 general.days={0} dagen
-##general.description=Description
-##general.disconnected=Disconnected
+general.description=Beschrijving
+general.disconnected=Niet verbonden
 general.downloads=Downloads
 general.estimatedsize=Geschatte omvang
 general.file=Bestand
@@ -560,19 +560,19 @@ preferences.dialog.dyndnsmanager.nomatch.text=De ingegeven DynDns klopt niet met
 preferences.dialog.dyndnsmanager.nomatch.title=De ingegeven DynDns klopt niet met deze host. 
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
-##preferences.dialog.findPort=Find port
-##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
+preferences.dialog.findPort=Zoek poort
+preferences.dialog.findPort.tooltip=<html>Dwingt PowerFolder om een vrije port te zoeken,<br>zelfs als een of meerdere poorten in de lijst geblokkeerd zijn.</html>
 preferences.dialog.general.title=Algemeen
-##preferences.dialog.iplanlist=LAN IP List
+preferences.dialog.iplanlist=LAN IP Lijst
 preferences.dialog.language=Taal
 preferences.dialog.lanlinesettings=LAN verbindings snelheid
 preferences.dialog.linesettings=Internet verbindings snelheid
 preferences.dialog.network.title=Netwerk
 preferences.dialog.networkmode.lanonly=alleen LAN
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
-##preferences.dialog.networkmode.name=Connect to
-##preferences.dialog.networkmode.private=LAN and Internet
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
+preferences.dialog.networkmode.name=Verbind met
+preferences.dialog.networkmode.private=LAN en Internet
+preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Maakt het verzenden van bestanden over LAN en Internet mogelijk.<BR>Verbind alleen met vrienden, bebruikers op het LAN en gebruikers die lid zijn van de Folder<BR>Verer verbind PowerFolder naar supernodes om het mogelijk te maken vrienden te vinden op het Internet.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
 preferences.dialog.plugin.classname=Java classname
@@ -581,9 +581,9 @@ preferences.dialog.plugin.name=Naam
 preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Actief
 preferences.dialog.plugin.status_enabled=InActief
-preferences.dialog.plugin.title=Plugin
-##preferences.dialog.randomPort=Automatically find a port
-##preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port. 
+preferences.dialog.plugin.title=Pro instellingen
+preferences.dialog.randomPort=Automatisch zoeken van poort
+preferences.dialog.randomPort.tooltip=PowerFolder zoekt automatisch een willekeurige poort. 
 preferences.dialog.restarttext=Door veranderingen in de instellingen is het noodzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
 preferences.dialog.showadvanced=Toon geavanceerde instellingen
@@ -610,23 +610,23 @@ previewfiles.description=Preview bestanden in deze Folder
 previewfiles.key=P
 previewfiles.name=Preview
 
-##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
-##pro.security.high=High
-##pro.security.high_info=High security (default)\:
-##pro.security.inet_encryption_preferred=Internet\: Encrypted connections are not required.
-##pro.security.inet_encryption_required=Internet\: Only encrypted connections are accepted.
-##pro.security.keymismatch=The public key of {0} mismatches the internal keystore.\nDo you want to accept his new key now?
-##pro.security.lan_encryption_preferred=LAN\:      Encrypted connections are not required.
-##pro.security.lan_encryption_required=LAN\:      Only encrypted connections are accepted.
-##pro.security.low=Low
-##pro.security.low_info=Low security\:
-##pro.security.maximum=Maximum
-##pro.security.maximum_info=Maximum security\:
-##pro.security.newkey=New Key detected
-##pro.security.nokeyfound=No public key for {0} found in internal keystore.\nDo you want to accept his new key now?
-##pro.security.possiblebreach=Possible security breach
-##pro.security.secure=secure
-##pro.security.securitysettings=Security Settings
+pro.security.autoacceptfriendkeys=Accepteer de eerste keer automatisch de publieke keys van vrienden
+pro.security.high=Hoog
+pro.security.high_info=Hoge beveiliging (standaard keuze)\:
+pro.security.inet_encryption_preferred=Internet\: Versleutelde verbindingen zijn niet verplicht.
+pro.security.inet_encryption_required=Internet\: Alleen versleutelde verbindingen worden geaccepteerd.
+pro.security.keymismatch=De publieke key van {0} komt niet overeen met de opgeslagen versie.\nWilt u deze key accepteren?
+pro.security.lan_encryption_preferred=LAN\:      Versleutelde verbindingen zijn niet verplicht.
+pro.security.lan_encryption_required=LAN\:      Alleen versleutelde verbindingen worden geaccepteerd.
+pro.security.low=Laag
+pro.security.low_info=Lage beveiliging\:
+pro.security.maximum=Maximum
+pro.security.maximum_info=Maximale beveileging\:
+pro.security.newkey=Nieuwe key gevonden
+pro.security.nokeyfound=Geen publieke key gevonden voor {0} in interne key opslag.\nWilt u de nieuwe key accepteren?
+pro.security.possiblebreach=Mogelijk beveilings lek
+pro.security.secure=versleuteld
+pro.security.securitysettings=Beveilings instellingen
 
 publicfolders.filter.show_empty_folders=Toon lege folders
 publicfolders.lastModified=Veranderd op
@@ -659,10 +659,10 @@ quickinfo.root.syncing=Bezig met synchroniseren...
 quickinfo.root.title=Welkom by PowerFolder\!
 quickinfo.upload.active={0} actieve upload(s)
 quickinfo.upload.title=Upload Status
-##quickinfo.user.isconnectedinet=Is on the Internet
-##quickinfo.user.isconnectedlan=Is on LAN
-##quickinfo.user.isdiconnected=Is disconnected
-##quickinfo.user.secureconnected=securely connected
+quickinfo.user.isconnectedinet=Is op het Internet
+quickinfo.user.isconnectedlan=Is op LAN
+quickinfo.user.isdiconnected=Is niet verbonden
+quickinfo.user.secureconnected=versleuteld verbonden
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -756,11 +756,11 @@ startdownloads.description=Opent het geselecteerde bestand
 startdownloads.key=O
 startdownloads.name=Open
 
-##status.download=Down\: %.2f KB/s
-##status.port=Port\: {0}
-##status.upload=Up\: %.2f KB/s
+status.download=Down\: %.2f KB/s
+status.port=Poort\: {0}
+status.upload=Up\: %.2f KB/s
 
-##statusbar.synchronizing=Synchronizing...
+statusbar.synchronizing=Synchronizeren...
 
 synchronisation.notice.title=Gekozen synchronisatieprofiel {0}
 synchronisation.warning.automatic_deletions=Deze mode zal automatisch bestandsverwijderingen synchroniseren\!\nDoorgaan ?
@@ -815,8 +815,8 @@ unignorefile.name=Verwijder uit uitzonderingslijst
 
 wizard.basicsetup.enternick=Voer gebruikersnaam in
 wizard.basicsetup.lanonly=Alleen LAN
-##wizard.basicsetup.networking=Connect to
-##wizard.basicsetup.private=LAN and Internet
+wizard.basicsetup.networking=Verbind met
+wizard.basicsetup.private=LAN en Internet
 wizard.basicsetup.title=Basis Setup
 wizard.choosedisklocation.select=Selecteer map
 wizard.choosedisklocation.title=Disk lokatie
@@ -854,13 +854,13 @@ wizard.projectsync.takepartsync=Neem deel in een project synchronisatie
 wizard.projectsync.title=Project synchronisatie
 wizard.sendinvitations.joinsync=Invitatie bestanden zijn vereist om lid te worden van een synchronizatie 
 wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
-##wizard.sendinvitations.offline=Not connected
-##wizard.sendinvitations.overpf=Via PowerFolder now
-##wizard.sendinvitations.savetofile=Save as file
-##wizard.sendinvitations.sendbymail=Send by mail
-##wizard.sendinvitations.sendinvitation=Send invitation
-##wizard.sendinvitations.sendsuccess=Invitation sent
-##wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
+wizard.sendinvitations.offline=Niet verbonden
+wizard.sendinvitations.overpf=Via PowerFolder Nu
+wizard.sendinvitations.savetofile=Opslaan als bestand
+wizard.sendinvitations.sendbymail=Verzend per e-mail
+wizard.sendinvitations.sendinvitation=Verzend invitatie
+wizard.sendinvitations.sendsuccess=Invitatie verzonden
+wizard.sendinvitations.sendsuccessinfo=U heeft de invitatie succesvol verzonden.
 wizard.sendinvitations.title=Sla een invitatie op 
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Vult uw (dynamic) dns in
