--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -49,7 +49,7 @@ about.dialog.version.text=Version\: {0}
 about.dialog.version.title=Version
 about.dialog.yoursystem.java_version=Java Version\: {0}
 about.dialog.yoursystem.os=OS\: {0}
-about.dialog.yoursystem.screen=Schirm\: {0}x{1}
+about.dialog.yoursystem.screen=Auflösung\: {0}x{1}
 about.dialog.yoursystem.title=Ihr System
 about.dialog_about_tab=\u00fcber
 about.dialog_contributers_tab=team
