added sync profile for backup

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,9 @@
 # http://www.powerfolder.com
 #
 
+syncprofile.backupsource.name=Backup (Quelle)
+syncprofile.backuptarget.name=Backup (Ziel)
+
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
