--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+limitedconnection.dont_autodetect=Konnektivität nicht länger prüfen
 syncprofile.backupsource.name=Backup (Quelle)
 syncprofile.backuptarget.name=Backup (Ziel)
 
