--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -86,7 +86,7 @@ connect.description=Manuelle Verbindung zu einem Powerfolder Benutzer
 connect.dialog.text=Bitte geben Sie den Namen des Hosts oder die IP Adresse des Benutzers an, mit dem Sie verbunden werden m\u00f6chten.\n\nPowerFolder verbindet sich nach kurzer Zeit automatisch mit dem Netzwerk,\nbenutzen Sie diese Option wenn Sie sich manuell verbinden wollen.\n 
 connect.dialog.title=Manuelle Verbindung zu einem Powerfolder Benutzer
 connect.key=c
-connect.name=Verbinden mit
+connect.name=Verbinden
 
 console.updatecheck.new_developmentversion=------------ Neue enwicklungs version heruntergeladen ------------
 
