--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,14 @@
 # http://www.powerfolder.com
 #
 
+freelimitdialog.title=Intensive Nutzung erkannt
+freelimitdialog.heavyusagedetected=PowerFolder hat erkannt, das Sie das Programm intensiv nutzen.
+freelimitdialog.buyrecommendation=Es is ratsam auf PowerFolder Pro umzusteigen.
+freelimitdialog.reason=Grund: Mehr als {0} Folder eingerichtet.
+freelimitdialog.whatispro=Warum sollte ich PowerFolder Pro erwerben?
+freelimitdialog.buypro=PowerFolder Pro kaufen
+freelimitdialog.ignore=Ignorieren
+
 limitedconnection.dont_autodetect=Konnektivität nicht länger prüfen
 syncprofile.backupsource.name=Backup (Quelle)
 syncprofile.backuptarget.name=Backup (Ziel)
