--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -18,10 +18,10 @@
 #
 
 freelimitdialog.title=Intensive Nutzung erkannt
-freelimitdialog.heavyusagedetected=PowerFolder hat erkannt, das Sie das Programm intensiv nutzen.
+freelimitdialog.heavyusagedetected=PowerFolder hat erkannt, daﬂ Sie das Programm intensiv nutzen.
 freelimitdialog.buyrecommendation=Es is ratsam auf PowerFolder Pro umzusteigen.
-freelimitdialog.reason=Grund: Mehr als {0} Folder eingerichtet.
-freelimitdialog.whatispro=Warum sollte ich PowerFolder Pro erwerben?
+freelimitdialog.reason=Grund: Es sind mehr als {0} Folder eingerichtet.
+freelimitdialog.whatispro=Warum sollte ich PowerFolder Pro kaufen?
 freelimitdialog.buypro=PowerFolder Pro kaufen
 freelimitdialog.ignore=Ignorieren
 
