--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,10 @@
 # http://www.powerfolder.com
 #
 
+buypro.description=PowerFolder Pro jetzt kaufen
+buypro.key=K
+buypro.name=Pro kaufen
+
 freelimitdialog.title=Intensive Nutzung erkannt
 freelimitdialog.heavyusagedetected=PowerFolder hat erkannt, daﬂ Sie das Programm intensiv nutzen.
 freelimitdialog.buyrecommendation=Es is ratsam auf PowerFolder Pro umzusteigen.
