--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -56,16 +56,24 @@ about.dialog_contributers_tab=\u56e2\u961f
 about.key=h
 about.name=\u5e2e\u52a9
 
+aboutwebservice.description=\u5728\u9ed8\u8ba4\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u7f51\u7edc\u670d\u52a1
+aboutwebservice.key=A
+aboutwebservice.name=\u5173\u4e8e\u7f51\u7edc\u670d\u52a1
+
 addfriend.description=\u6dfb\u52a0\u597d\u53cb\u5230\u5217\u8868
 addfriend.key=f
 addfriend.name=\u6dfb\u52a0\u597d\u53cb
 
-addmodifierfriend.description=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u5230\u597d\u53cb\u5217\u8868Adds the modifier of file to friendlist
+addmodifierfriend.description=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u5230\u597d\u53cb\u5217\u8868
 addmodifierfriend.key=f
-addmodifierfriend.name=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u4e3a\u597d\u53cbAdd file Modifier to Friends
+addmodifierfriend.name=\u5c06\u6587\u4ef6\u4fee\u6539\u8005\u6dfb\u52a0\u4e3a\u597d\u53cb
 
 addressEditor.parseerror=<html>\u8bf7\u8f93\u5165\u5c40\u57df\u7f51IP\uff0c\u6b63\u786e\u7684\u8f93\u5165\u683c\u5f0f\:<br>xxx.xxx.xxx.xxx \u6216<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-\u8303\u56f4
+
+buypro.description=\u7acb\u5373\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248
+buypro.key=B
+buypro.name=\u8d2d\u4e70\u4e13\u4e1a\u7248
 
 chatpanel.cannot_deliver=\u56e0\u4e3a\u4e0d\u80fd\u8fde\u63a5'{0}'\uff0c\u6d88\u606f\u4e0d\u80fd\u4f20\u9012
 chatpanel.chat_with=\u804a\u5929
@@ -107,6 +115,7 @@ dialog.addmembertofriendlist.button.no_neveraskagain=\u5426\uff08\u4e0d\u518d\u6
 dialog.addmembertofriendlist.button.yes=\u662f
 dialog.addmembertofriendlist.explain=\uff08\u901a\u8fc7\u6dfb\u52a0\u7528\u6237\u5230\u597d\u53cb\u5217\u8868\uff0c\u4f60\u53ef\u4ee5\u7ed9\u4ed6\u4fee\u6539\u4f60\u6587\u4ef6\u5939\u5185\u5bb9\u7684\u6743\u9650\uff0c\u5982\u6dfb\u52a0\u65b0\u6587\u4ef6\u3002\u4f60\u53ef\u4ee5\u7528\u53f3\u952e\u83dc\u5355\u5f88\u5bb9\u6613\u5730\u6539\u53d8\u6210\u5458\u72b6\u6001\u3002\uff09
 dialog.addmembertofriendlist.question={0} \u52a0\u5165\u591a\u4e2a\u6587\u4ef6\u5939\uff1a\r\n\r\n{1}\r\n\u662f\u5426\u7acb\u5373\u6dfb\u52a0\u5230\u4f60\u7684\u597d\u53cb\u5217\u8868\uff1f
+dialog.addmembertofriendlist.question2={0} \u5df2\u7ecf\u5c06\u60a8\u52a0\u5165\u597d\u53cb\u5217\u8868\uff0c\n\n\u60a8\u60f3\u9a6c\u4e0a\u5c06\u4ed6\u52a0\u5165\u60a8\u7684\u597d\u53cb\u5217\u8868\u5417\uff1f
 dialog.addmembertofriendlist.title=\u6dfb\u52a0 {0} \u5230\u597d\u53cb\u5217\u8868
 dialog.alreadyrunning.exitbutton=\u9000\u51fa
 dialog.alreadyrunning.startbutton=\u65e0\u8bba\u5982\u4f55\u7ee7\u7eed
@@ -131,6 +140,8 @@ dialog.updatecheck.developmentversion.optionrestart=\u91cd\u542f
 dialog.updatecheck.developmentversion.text=\n\u5df2\u7ecf\u4e0b\u8f7dPowerFolder\u65b0\u7684\u5f00\u53d1\u7248\u672c\u3002\n\n - Buildtimes -\n\u5f53\u524d\u7248\u672c\: {0}\n\u65b0\u7248\u672c\: {1}\n\n\u8bf7\u7acb\u5373\u91cd\u65b0\u542f\u52a8PowerFolder\u3002\n
 dialog.updatecheck.developmentversion.title=\u65b0\u7684\u5f00\u53d1\u7248\u672c
 dialog.updatecheck.downloadAndUpdate=\u7acb\u5373\u4e0b\u8f7d\u5e76\u66f4\u65b0
+dialog.updatecheck.failed.title=\u5347\u7ea7\u5931\u8d25
+dialog.updatecheck.failed.text=\u5347\u7ea7\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u60a8\u7684\u7f51\u7edc\u8fde\u63a5\u3002\n \nPowerFolder \u4e13\u4e1a\u7248\uff1a\u8bf7\u540c\u65f6\u68c0\u67e5\u60a8\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/PowerFolder\u4e13\u4e1a\u7248\u52a0\u8f7d\u5668\u3002
 dialog.updatecheck.gotoHomepage=\u8bbf\u95ee PowerFolder \u4e3b\u9875
 dialog.updatecheck.noUpdateAvailable=\u76ee\u524d\u5df2\u7ecf\u662f\u6700\u65b0\u7248\u672c
 dialog.updatecheck.nothingNeverAsk=\u4e0d\u518d\u8be2\u95ee
@@ -201,7 +212,7 @@ filelist.status.no_files_available_yet_fetching_filelist=\u4ecd\u65e0\u6709\u654
 filenameproblem.dialog.add_to_ignore=\u6dfb\u52a0\u5230\u5ffd\u7565
 filenameproblem.dialog.add_to_ignore.explained=\u6dfb\u52a0\u6587\u4ef6\u5230\u5ffd\u7565\u5217\u8868\u5e76\u4e0d\u518d\u5171\u4eab
 filenameproblem.dialog.automatic_rename=\u81ea\u52a8\u91cd\u547d\u540d
-filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+filenameproblem.dialog.automatic_rename.explained=\u5220\u9664\u65e0\u6548\u5b57\u7b26\u548c/\u6216\u52a0\u4e0a"-1"\uff0c\u6216\u521b\u5efa\u4e00\u4e2a\u6709\u6548\u7684\uff08\u552f\u4e00\u7684\uff09\u76f8\u4f3c\u6587\u4ef6\u540d\u4fee\u590d\u3002
 filenameproblem.dialog.description=\u68c0\u6d4b\u5230\u6587\u4ef6\u540d\u51fa\u9519\uff0c\u8bf7\u4e3a\u6bcf\u4e2a\u6587\u4ef6\u9009\u62e9\u5904\u7406\u65b9\u6848
 filenameproblem.dialog.do_nothing=\u4e0d\u7ba1\u5b83
 filenameproblem.dialog.never_ask_this_again=\u4e0d\u518d\u8be2\u95ee
@@ -236,6 +247,7 @@ folder.members.synchronisation_panel.title=\u6210\u5458\u540c\u6b65\u72b6\u6001
 
 foldercreate.description=\u521b\u5efa\u5171\u4eab
 foldercreate.dialog.saveinvitation=\u5728\u6587\u4ef6\u5939\u4fdd\u7559\u9080\u8bf7
+foldercreate.dialog.sendinvitation=\u4ee5\u540e\u53d1\u9001\u9080\u8bf7
 foldercreate.dialog.settings=\u8bbe\u7f6e\u65b0\u5171\u4eab
 foldercreate.dialog.title=\u5171\u4eab\u65b0\u6587\u4ef6\u5939
 foldercreate.dirempty.text=\u6587\u4ef6\u5939\u5730\u5740\u4e0d\u80fd\u4e3a\u7a7a
@@ -322,6 +334,14 @@ folderrepository.warnonclose.neveraskagain=\u4e0d\u518d\u8be2\u95ee\u3002
 folderrepository.warnonclose.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u672a\u540c\u6b65\uff1a\n\n\n\n{0}\n\n\n\u7ee7\u7eed\u9000\u51fa\uff1f
 folderrepository.warnonclose.title=\u7ee7\u7eed\u9000\u51fa\uff1f
 
+freelimitdialog.buyrecommendation=\u63a8\u8350\u60a8\u5347\u7ea7\u5230\u4e13\u4e1a\u7248\u3002
+freelimitdialog.buypro=\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248
+freelimitdialog.heavyusagedetected=PowerFolder\u68c0\u6d4b\u5230\u60a8\u5927\u91cf\u4f7f\u7528PowerFolder.
+freelimitdialog.ignore=\u5ffd\u7565
+freelimitdialog.reason=\u539f\u56e0\uff1a\u8d85\u8fc7 {0}\u4e2a\u6587\u4ef6\u5939\u88ab\u914d\u7f6e\u3002
+freelimitdialog.title=\u68c0\u6d4b\u5230\u5927\u91cf\u4f7f\u7528
+freelimitdialog.whatispro=\u4e3a\u4ec0\u4e48\u6211\u8981\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248?
+
 friendsearch.no_user_found=\u6ca1\u6709\u627e\u5230\u7528\u6237
 friendsearch.nodetable.hostname=\u4e3b\u673a\u540d
 friendsearch.nodetable.ip=IP
@@ -335,6 +355,7 @@ friendspanel.n_a=n/a
 friendspanel.search_for_user=\u67e5\u627e\u7528\u6237
 friendspanel.search_results=\u67e5\u627e\u7ed3\u679c
 
+general.apply=\u5e94\u7528
 general.availability=\u6709\u6548\u6027
 general.cancel=\u53d6\u6d88
 general.cancel.key=C     
@@ -379,6 +400,7 @@ general.today=\u4eca\u5929
 general.uploads=\u4e0a\u4f20
 general.user=\u7528\u6237
 general.visibility=\u516c\u5f00\u7a0b\u5ea6
+general.webservice=\u5728\u7ebf\u5b58\u50a8
 general.yesterday=\u6628\u5929
 
 hideoffline.description=\u5728\u641c\u7d22\u7ed3\u679c\u4e2d\u8fc7\u6ee4\u5230\u79bb\u7ebf\u7528\u6237 
@@ -403,11 +425,12 @@ join_by_invitation.name=\u4f7f\u7528\u9080\u8bf7
 joinfolder.already_joined_text=\u4f60\u5df2\u7ecf\u662f\u6587\u4ef6\u5939 {0} \u7684\u6210\u5458\u4e86
 joinfolder.already_joined_title=\u4e0d\u80fd\u52a0\u5165 {0}
 
+limitedconnection.dont_autodetect=\u4e0d\u518d\u68c0\u6d4b\u53d7\u9650\u8fde\u63a5
 limitedconnection.text=PowerFolder\u68c0\u6d4b\u5230\u7f51\u7edc\u7684\u8fde\u63a5\u53d7\u9650\u3002\n\u53ef\u80fd\u662f\u7531\u9632\u706b\u5899\u3001\u8def\u7531\u5668\u6216Windows\u8fde\u63a5\u5171\u4eab\u6240\u5f15\u8d77\u3002\n\u6211\u4eec\u7684\u7591\u96be\u89e3\u7b54\u6709\u4ecb\u7ecd\u6539\u5584\u7f51\u7edc\u8fde\u63a5\u7684\u65b9\u6cd5\u3002\nhttp\://www.powerfolder.com
 limitedconnection.title=\u53d7\u9650\u7684\u8fde\u63a5
 
-linespeed.T1=T1 1.544mbit/s
-linespeed.T3=T3 43.232mbit/s
+linespeed.T1=T1 1.544mbit/\u79d2
+linespeed.T3=T3 43.232mbit/\u79d2
 linespeed.adsl128=DSL 128Kbit
 linespeed.adsl256=DSL 256Kbit
 linespeed.adsl512=DSL 512Kbit
@@ -416,9 +439,9 @@ linespeed.customspeed=\u81ea\u5b9a\u4e49
 linespeed.downloadspeed=\u4e0b\u8f7d\u9650\u5236
 linespeed.isdnspeed128=ISDN 128Kbit
 linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/\u79d2
-linespeed.lan100=LAN 100mbit/\u79d2
-linespeed.lan1000=LAN 1000mbit/\u79d2
+linespeed.lan10=\u5c40\u57df\u7f51 10mbit/\u79d2
+linespeed.lan100=\u5c40\u57df\u7f51 100mbit/\u79d2
+linespeed.lan1000=\u5c40\u57df\u7f51 1000mbit/\u79d2
 linespeed.unlimited=\u4e0d\u9650\u901f
 linespeed.uploadspeed=\u4e0a\u4f20\u9650\u901f
 
@@ -434,6 +457,10 @@ member.friend=\u597d\u53cb
 member.non_mutual_friend=\u6ca1\u6709\u5171\u540c\u7684\u597d\u53cb
 member.onlan=Onlan
 member.supernode=\u8d85\u7ea7\u7528\u6237
+
+mirrorfolder.description=\u8bbe\u7f6e\u7f51\u7edc\u670d\u52a1\u4ee5\u5907\u4efd\u6587\u4ef6\u5939
+mirrorfolder.key=B
+mirrorfolder.name=\u5907\u4efd\u6587\u4ef6\u5939
 
 mp3fileinfo.album=\u4e13\u8f91
 mp3fileinfo.artist=\u827a\u672f\u5bb6
@@ -510,6 +537,10 @@ openfile.description=\u6253\u5f00\uff08\u8fd0\u884c\uff09\u9009\u62e9\u7684\u658
 openfile.key=O
 openfile.name=\u6253\u5f00\u6587\u4ef6
 
+openwebservice.description=\u5728\u9ed8\u8ba4\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00\u7f51\u7edc\u670d\u52a1
+openwebservice.key=B
+openwebservice.name=\u5728\u6d4f\u89c8\u5668\u4e2d\u6253\u5f00
+
 plugin_disable.description=\u7981\u7528 (\u5e76\u505c\u6b62) \u63d2\u4ef6
 plugin_disable.key=D
 plugin_disable.name=\u7981\u7528
@@ -536,6 +567,7 @@ preferences.dialog.bindDescr=\u8be6\u7ec6\u4fe1\u606f
 preferences.dialog.colortheme=\u98ce\u683c
 preferences.dialog.createdesktopshortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u5982\u679c\u7528\u6237\u6210\u4e3a\u6587\u4ef6\u5939\u6210\u5458\uff0c\u63d0\u793a\u662f\u5426\u6dfb\u52a0\u4e3a\u597d\u53cb
+preferences.dialog.dialogs.check_for_program_updates=\u68c0\u67e5PowerFolder\u7a0b\u5e8f\u5347\u7ea7\u3002
 preferences.dialog.dialogs.title=\u5bf9\u8bdd\u6846
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u540c\u6b65\u65f6\u5173\u95ed\u7a0b\u5e8f\u63d0\u793a
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u8fde\u63a5\u53d7\u9650\u65f6\u63d0\u793a(\u6ca1\u6709\u6536\u5230\u7684\u8fde\u63a5)
@@ -575,6 +607,8 @@ preferences.dialog.networkmode.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f5
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>\u6587\u4ef6\u80fd\u591f\u5728LAN\u53caInternet\u95f4\u4f20\u8f93\u3002<BR>\u5b9e\u9645\u4e0a\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684\u597d\u53cb\u3001\u7528\u6237\u53ca\u52a0\u5165\u6b64\u6587\u4ef6\u5939\u7684\u4eba\u3002<BR>\u5c06\u6765PowerFolder\u5c06\u8fde\u63a5\u8d85\u7ea7\u8282\u70b9\u6765\u67e5\u627e\u4f60\u5728\u4e92\u8054\u7f51\u4e0a\u7684\u597d\u53cb\u3002</BODY></HTML>
 preferences.dialog.nickname=\u6635\u79f0
 preferences.dialog.nonwindowsinfo=\u6ce8\u610f\uff1a\u90e8\u5206\u8bbe\u7f6e\u4ec5\u5728Windows\u64cd\u4f5c\u7cfb\u7edf\u6709\u6548
+preferences.dialog.openport=\u81ea\u52a8\u6253\u5f00Windows\u9632\u706b\u5899
+preferences.dialog.openport.tooltip=\u5728Windows\u9632\u706b\u5899\u6253\u5f00PowerFolder\u7aef\u53e3
 preferences.dialog.plugin.classname=Java\u7c7b\u540d
 preferences.dialog.plugin.description=\u63cf\u8ff0
 preferences.dialog.plugin.name=\u540d\u79f0
@@ -591,6 +625,7 @@ preferences.dialog.showpreviewpanel=\u542f\u7528\u5185\u90e8\u56fe\u7247\u9884\u
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u60a8\u53ef\u4ee5\u5728 \u6211\u7684\u6587\u4ef6\u5939->\u6587\u4ef6\u5939->\u6587\u4ef6->\u8be6\u7ec6 \u627e\u5230\u56fe\u7247\u9884\u89c8<BR>(\u6b64\u529f\u80fd\u5728\u4f7f\u7528\u5927\u56fe\u7247\u65f6\u5c06\u5927\u91cf\u5360\u7528\u5185\u5b58(>500K)\uff0c\u8c28\u614e\u4f7f\u7528\u3002)</BODY></HTML>
 preferences.dialog.silentthrottle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf 
 preferences.dialog.silentthrottle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
+preferences.dialog.startwithwindows=\u968fWindows\u542f\u52a8PowerFolder
 preferences.dialog.statusCantResolve=\u52a8\u6001Dns {0}\uff1a\u4e0d\u80fd\u89e3\u6790\uff01
 preferences.dialog.statusDynDnsSuccess=\u52a8\u6001Dns {0} \u9a8c\u8bc1\u6210\u529f\uff01
 preferences.dialog.statusValidFailed=DynDns {0}\uff1a\u9a8c\u8bc1\u5931\u8d25\uff01
@@ -663,6 +698,11 @@ quickinfo.user.isconnectedinet=\u4e92\u8054\u7f51
 quickinfo.user.isconnectedlan=\u5c40\u57df\u7f51
 quickinfo.user.isdiconnected=\u672a\u8fde\u63a5
 quickinfo.user.secureconnected=\u5b89\u5168\u8fde\u63a5
+quickinfo.webservice.connected=\u8fde\u63a5\u5230PowerFolder\u7f51\u7edc\u670d\u52a1
+quickinfo.webservice.foldersmirrored= {1}\u4e2a \u6587\u4ef6\u5939\u7684{0}\u4e2a\u88ab\u5907\u4efd
+quickinfo.webservice.notconnected=\u65ad\u5f00PowerFolder\u7f51\u7edc\u670d\u52a1
+quickinfo.webservice.notsetup=\u8fd8\u6ca1\u6709\u914d\u7f6ePowerFolder\u7f51\u7edc\u670d\u52a1
+quickinfo.webservice.title=\u5728\u7ebf\u5b58\u50a8 - \u7f51\u7edc\u670d\u52a1
 
 reconnect.description=\u73b0\u5728\u91cd\u65b0\u8fde\u63a5\u8be5\u7528\u6237
 reconnect.key=r
@@ -771,6 +811,8 @@ synchronisation.warning.title=\u6fc0\u6d3b\u6587\u4ef6\u5939 {1} \u7684\u540c\u6
 
 syncprofile.autodownload_all.name=\u81ea\u52a8\u4e0b\u8f7d\uff08\u5168\u90e8\uff09
 syncprofile.autodownload_friends.name=\u81ea\u52a8\u4e0b\u8f7d\uff08\u597d\u53cb\uff09
+syncprofile.backupsource.name=\u5907\u4efd (\u6e90)
+syncprofile.backuptarget.name=\u5907\u4efd(\u76ee\u6807)
 syncprofile.custom.name=\u81ea\u5b9a\u4e49\u2026\u2026
 syncprofile.leecher.name=\u6587\u4ef6\u4e0b\u8f7d\u8005
 syncprofile.leechreleaser.name=\u6587\u4ef6\u53d1\u5e03\u8005
@@ -813,6 +855,8 @@ unignorefile.description=\u6587\u4ef6\u5c06\u518d\u6b21\u4e0b\u8f7d/\u5171\u4eab
 unignorefile.key=U
 unignorefile.name=\u5220\u9664\u5ffd\u7565
 
+winutils.shortcut.description=\u6b64\u5feb\u6377\u65b9\u5f0f\u7531PowerFolder\u653e\u7f6e\u4e8e\u6b64
+
 wizard.basicsetup.enternick=\u8bf7\u8f93\u5165\u4f60\u7684\u6635\u79f0
 wizard.basicsetup.lanonly=\u4ec5\u5c40\u57df\u7f51
 wizard.basicsetup.networking=\u8fde\u63a5\u65b9\u5f0f
@@ -852,6 +896,7 @@ wizard.projectsync.setupsync=\u8bbe\u7f6e\u65b0\u7684\u540c\u6b65
 wizard.projectsync.successjoin=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u9879\u76ee\uff01
 wizard.projectsync.takepartsync=\u52a0\u5165\u540c\u6b65
 wizard.projectsync.title=\u540c\u6b65\u9879\u76ee
+wizard.sendinvitations.additionaltext=\u9644\u52a0\u4fe1\u606f
 wizard.sendinvitations.joinsync=\u52a0\u5165\u540c\u6b65\u5fc5\u987b\u6709\u9080\u8bf7\u6587\u4ef6
 wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.offline=\u672a\u8fde\u63a5
@@ -882,4 +927,16 @@ wizard.whattodo.openonlinedocumentation=\u6253\u5f00\u5728\u7ebf\u6587\u6863
 wizard.whattodo.projectwork=\u540c\u6b65\u9879\u76ee
 wizard.whattodo.syncpcs=\u540c\u6b65\u7535\u8111
 wizard.whattodo.title=\u4f60\u60f3\u505a\u4ec0\u4e48\uff1f
+
+wizard.webservice.learnmore=\u4ec0\u4e48\u662fPowerFolder\u7f51\u7edc\u670d\u52a1?
+
+wizard.webservice.enteraccount=\u8f93\u5165\u60a8\u7684\u8d26\u53f7\u6765\u767b\u5f55\u7f51\u7edc\u670d\u52a1
+wizard.webservice.login=\u767b\u5f55\u5728\u7ebf\u5b58\u50a8
+wizard.webservice.password=\u5bc6\u7801
+wizard.webservice.register=\u6ce8\u518c\u65b0\u8d26\u53f7
+wizard.webservice.username=Email
+
+wizard.webservice.mirrorsetup=\u7528\u7f51\u7edc\u670d\u52a1\u5907\u4efd\u6587\u4ef6\u5939
+wizard.webservice.mirrorchoosefolder=\u9009\u62e9\u8981\u7528PowerFolder\u5907\u4efd\u7684\u6587\u4ef6\u5939
+
 
