--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -7,7 +7,7 @@
 # Then remove the ## in front of the line.
 #
 # There is also a guide on our offical webpage under
-# http://www.powerfolder.com/?q=node/i18n
+# http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
 # contact@powerfolder.com
@@ -56,6 +56,10 @@ about.dialog_contributers_tab=Team
 about.key=h
 about.name=Help
 
+##aboutwebservice.description=Opens the WebService of the webservice in default browser
+##aboutwebservice.key=A
+##aboutwebservice.name=About WebService
+
 addfriend.description=Voegt gebruiker toe aan de vriendenlijst
 addfriend.key=T
 addfriend.name=Toevoegen aan vrienden
@@ -66,6 +70,10 @@ addmodifierfriend.name=Maak bewerker vriend
 
 addressEditor.parseerror=<html>Geef de IPs in die op het LAN zitten, geldige ingave\:<br>xxx.xxx.xxx.xxx of<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Reeks
+
+##buypro.description=Upgrade to PowerFolder Pro now
+##buypro.key=B
+##buypro.name=Buy Pro
 
 chatpanel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
 chatpanel.chat_with=Chat met
@@ -93,6 +101,8 @@ createshortcut.name=Maak een snelkoppeling
 delete_confimation.busy.description=Verwijderen van bestand(en)
 delete_confimation.busy.title=Verwijderen van bestand(en)
 delete_confimation.text=Weet u zeker dat u het/de volgende bestand(en) wilt verwijderen\:\n\n{0}\nLet op\: deze bestanden worden werkelijk van uw computer verwijderd en niet in uw Prullenbak geplaatst
+##delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
+##delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
 delete_confimation.text_movetorecyclebin=Weet u zeker dat u de  volgende bestanden naar de PowerFolder prullenbak wilt verplaatsen?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=Weet u zeker dat u de volgende bestanden en of mappen (inclusief submappen en bestanden) naar\nde PowerFolder prullenbak wilt verplaatsen?
@@ -107,6 +117,7 @@ dialog.addmembertofriendlist.button.no_neveraskagain=Nee (Nooit meer vragen)
 dialog.addmembertofriendlist.button.yes=Ja
 dialog.addmembertofriendlist.explain=(Door iemand aan uw vriendenlijst toe te voegen, geeft u hem/haar toestemming om de bestanden\nin uw folder te wijzigen. Maar ook het toevoegen van bestanden. U kunt de "friend status" van een gebruiker\n met via het popupmenu (rechter muisknop).)
 dialog.addmembertofriendlist.question={0} werd lid van een of meer folder(s)\:\n\n{1}\nwilt u hem aan uw vriendenlijst toevoegen?
+##dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
 dialog.addmembertofriendlist.title=Voeg {0} toe aan vriendenlijst
 dialog.alreadyrunning.exitbutton=Afsluiten
 dialog.alreadyrunning.startbutton=Start geforceerd
@@ -131,6 +142,8 @@ dialog.updatecheck.developmentversion.optionrestart=Opnieuw starten
 dialog.updatecheck.developmentversion.text=\nEen nieuwe ontwikkel versie van PowerFolder is gedownload.\n\n"- Gemaakt op/om -\nDeze versie\: {0}\nNieuwe versie\: {1}\n\nStart Powerfolder opnieuw.\n
 dialog.updatecheck.developmentversion.title=Nieuwe ontwikkel versie
 dialog.updatecheck.downloadAndUpdate=Download en nu actualiseren?
+##dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.updatecheck.failed.title=Update failed
 dialog.updatecheck.gotoHomepage=Ga naar de PowerFolder Homepage
 dialog.updatecheck.noUpdateAvailable=Deze versie is recent
 dialog.updatecheck.nothingNeverAsk=Niets en vraag niet opnieuw
@@ -235,7 +248,11 @@ folder.members.synchronisation_panel.local_size=Lokale grootte
 folder.members.synchronisation_panel.title=Lid Sync Status
 
 foldercreate.description=Maakt een nieuwe gedeelde folder aan
+##foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
+##foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=Sla een Invitatie bestand op in de Folder
+##foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.settings=Kies de instellingen voor de nieuwe gedeelde folder
 foldercreate.dialog.title=Deel een folder
 foldercreate.dirempty.text=Basis map van de folder moet gekozen worden
@@ -270,12 +287,6 @@ folderjoin.secret=Geheim
 folderjoin.warning.notempty.text=De map voor de lokale kopie van de folder '{0}' is niet leeg.\nAlle bestanden aanwezig daar kunnen worden verzonden aan deelnemers in de folder.\nWeet u zeker dat de lokale kopie van de folder hier geplaatst moet worden\n'{1}' ?
 folderjoin.warning.notempty.title=Lokale basis map niet leeg
 
-folderjoinleave.description=Wordt lid of stop het delen van de folder.
-folderjoinleave.join=Lid worden
-folderjoinleave.key=f
-folderjoinleave.leave=Verlaat folder
-folderjoinleave.name=Lid worden
-
 folderleave.description=Verlaat deze folder (Stop delen en downloading van gegevens)
 folderleave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
 folderleave.dialog.text=Stop delen van folder {0} ?
@@ -283,11 +294,16 @@ folderleave.dialog.title=Stop delen van Folder {0} ?
 folderleave.key=V
 folderleave.name=Verlaat folder
 
+##foldermove.progress.text=Moving folder '{0}'
+##foldermove.progress.title=Folder Move
+
 folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
 folderpanel.filestab.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
-folderpanel.hometab.folder_type=Folder type
+##folderpanel.hometab.choose_local_folder.title=Choose local folder
+##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
+##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
 folderpanel.hometab.number_of_available_files_at_other_members=Aantal beschikbare bestanden bij andere leden
@@ -317,10 +333,19 @@ folderpanel.settingstab.removebutton.description=Verwijder een patroon
 folderpanel.settingstab.removebutton.key=V
 folderpanel.settingstab.removebutton.name=Verwijder
 folderpanel.settingstab.title=Instellingen
+##folderpanel.settingstab.userecyclebin=Use recycle bin
 
 folderrepository.warnonclose.neveraskagain=Nooit meer vragen. 
 folderrepository.warnonclose.text=Deze folders zijn nog niet gesynchroniseerd\:\n\n\n\n{0}\n\n\nDoorgaan met sluiten?
 folderrepository.warnonclose.title=Doorgaan met sluiten?
+
+##freelimitdialog.buypro=Buy PowerFolder Pro
+##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
+##freelimitdialog.ignore=Ignore
+##freelimitdialog.reason=Reason\: More than {0} Folders configured.
+##freelimitdialog.title=Heavy use detected
+##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=Geen gebruiker gevonden
 friendsearch.nodetable.hostname=Hostname
@@ -335,6 +360,7 @@ friendspanel.n_a=n/b
 friendspanel.search_for_user=Zoek gebruiker
 friendspanel.search_results=Zoek resultaten
 
+##general.apply=Apply
 general.availability=Beschikbaarheid
 general.cancel=Annuleren
 general.cancel.key=A 
@@ -379,6 +405,7 @@ general.today=gisteren
 general.uploads=Uploads
 general.user=User
 general.visibility=Toegankelijkheid
+##general.webservice=Online Storage
 general.yesterday=vandaag
 
 hideoffline.description=De niet verbonden gebruikers worden verborgen 
@@ -403,6 +430,7 @@ join_by_invitation.name=Laad Invitatie
 joinfolder.already_joined_text=U bent al lid van folder {0}
 joinfolder.already_joined_title=Niet mogelijk lid te worden {0}
 
+##limitedconnection.dont_autodetect=No longer detect limited connectivity
 limitedconnection.text=PowerFolder heeft gelimiteerde verbinding naar het netwerk gedetecteerd.\nDit kan worden veroorzaakt door een firewall, router of "delen van bestanden met Windows".\nLees de FAQ om de verbindingen te verbeteren.\nhttp\://www.powerfolder.com
 limitedconnection.title=Beperkte connectie
 
@@ -435,6 +463,10 @@ member.non_mutual_friend=Niet wederzijdse vriend
 member.onlan=Lokaal
 member.supernode=Supernode
 
+##mirrorfolder.description=Setup the WebService to backup a folder
+##mirrorfolder.key=B
+##mirrorfolder.name=Backup Folder
+
 mp3fileinfo.album=Album
 mp3fileinfo.artist=Artiest
 mp3fileinfo.bitrate=Bitrate
@@ -451,6 +483,7 @@ myfolderstable.number_of_available_files=\#Beschikbaar
 myfolderstable.number_of_deleted_files=\#Verwijderd
 myfolderstable.number_of_local_files=\#Lokaal
 myfolderstable.number_of_members={0} leden
+##myfolderstable.sync=Sync
 myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profiel
 myfolderstable.total_size=Lokale grote
@@ -510,6 +543,10 @@ openfile.description=Open (start) geselecteerd bestand
 openfile.key=O
 openfile.name=Open bestand
 
+##openwebservice.description=Opens the WebService in the default browser
+##openwebservice.key=B
+##openwebservice.name=Open in Browser
+
 plugin_disable.description=Deactiveer / Stop Plugin
 plugin_disable.key=S
 plugin_disable.name=Stop
@@ -536,12 +573,12 @@ preferences.dialog.bindDescr=Interface beschrijving
 preferences.dialog.colortheme=Kleur thema
 preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
+##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogen
 preferences.dialog.dialogs.warnoncloseifnotinsync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
 preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij gelimiteerde verbinding (Geen binnenkomende verbindingen)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
 preferences.dialog.dyndns=Mijn - dynamic - DNS
-preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Hou dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=Huidig IP
@@ -575,6 +612,8 @@ preferences.dialog.networkmode.private=LAN en Internet
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Maakt het verzenden van bestanden over LAN en Internet mogelijk.<BR>Verbind alleen met vrienden, bebruikers op het LAN en gebruikers die lid zijn van de Folder<BR>Verer verbind PowerFolder naar supernodes om het mogelijk te maken vrienden te vinden op het Internet.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
+##preferences.dialog.openport=Automatically open Windows Firewall
+##preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
 preferences.dialog.plugin.classname=Java classname
 preferences.dialog.plugin.description=Beschrijving
 preferences.dialog.plugin.name=Naam
@@ -591,12 +630,15 @@ preferences.dialog.showpreviewpanel=Activeer interne foto preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>U kunt de interne foto preview vinden onder Mijn Folders->Folder->Bestanden->Details<BR>(Deze eigenschap van die programma is geheugen "hongerig" bij grote jpg's (>500K), gebruik voorzichtig.)</BODY></HTML>
 preferences.dialog.silentthrottle=Passive mode bandbreedte beperking 
 preferences.dialog.silentthrottle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
+##preferences.dialog.smalltoolbar=Use small toolbar icons
+##preferences.dialog.startwithwindows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: kan niet worden gevonden\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} controle gelukt\!
 preferences.dialog.statusValidFailed=DynDns {0}\: controle mislukt\!
 preferences.dialog.statusWaitDynDns=S.V.P. even wachten, DynDns {0} wordt gecontroleerd\!
 preferences.dialog.title=Instellingen
 preferences.dialog.titleProcessing=verwerken...
+##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Gebruik ZIP compressie op LAN 
 preferences.dialog.useziponlan.tooltip=Activeer als bestanden makkelijk te comprimeren zijn (Dit beinvloed mogelijk het CPU gebruik)
 preferences.dialog.warnningMessage=Waarschuwing
@@ -663,6 +705,11 @@ quickinfo.user.isconnectedinet=Is op het Internet
 quickinfo.user.isconnectedlan=Is op LAN
 quickinfo.user.isdiconnected=Is niet verbonden
 quickinfo.user.secureconnected=versleuteld verbonden
+##quickinfo.webservice.connected=Connected to the PowerFolder WebService
+##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
+##quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
+##quickinfo.webservice.title=Online Storage - WebService
 
 reconnect.description=Reconnects to this user now
 reconnect.key=r
@@ -771,6 +818,8 @@ synchronisation.warning.title=Activeer synchronisatieprofiel {0} voor {1}
 
 syncprofile.autodownload_all.name=Automatisch downloaden (van iedereen)
 syncprofile.autodownload_friends.name=Automatisch downloaden (van vrienden)
+##syncprofile.backupsource.name=Backup (Source)
+##syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Aangepast...
 syncprofile.leecher.name=Torrent downloader
 syncprofile.leechreleaser.name=Verspreidt Torrents
@@ -813,6 +862,8 @@ unignorefile.description=Bestand zal weer worden gedownload/gedeeld
 unignorefile.key=l
 unignorefile.name=Verwijder uit uitzonderingslijst
 
+##winutils.shortcut.description=This shortcut was placed here by PowerFolder
+
 wizard.basicsetup.enternick=Voer gebruikersnaam in
 wizard.basicsetup.lanonly=Alleen LAN
 wizard.basicsetup.networking=Verbind met
@@ -852,6 +903,7 @@ wizard.projectsync.setupsync=Setup een project synchronisatie
 wizard.projectsync.successjoin=U bent nu lid van het project 
 wizard.projectsync.takepartsync=Neem deel in een project synchronisatie
 wizard.projectsync.title=Project synchronisatie
+##wizard.sendinvitations.additionaltext=Additional Information
 wizard.sendinvitations.joinsync=Invitatie bestanden zijn vereist om lid te worden van een synchronizatie 
 wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
 wizard.sendinvitations.offline=Niet verbonden
@@ -876,6 +928,14 @@ wizard.syncpcspanel.selecttarget=Kies een lokale map waar de bestanden terecht m
 wizard.syncpcspanel.setup=Setup een nieuwe synchronisatie
 wizard.syncpcspanel.takepart=Wordt lid van een synchronisatie
 wizard.syncpcspanel.title=Synchroniseer PCs
+##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+##wizard.webservice.learnmore=What is the PowerFolder WebService?
+##wizard.webservice.login=Online Storage Login
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
+##wizard.webservice.mirrorsetup=Backup Folder by WebService
+##wizard.webservice.password=Password
+##wizard.webservice.register=Register new Account
+##wizard.webservice.username=Email
 wizard.whattodo.bordertext=Kies een optie
 wizard.whattodo.filesharing=Delen van bestanden
 wizard.whattodo.openonlinedocumentation=Open Documentatie op internet
