--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -7,7 +7,7 @@
 # Then remove the ## in front of the line.
 #
 # There is also a guide on our offical webpage under
-# http://www.powerfolder.com/?q=node/i18n
+# http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
 # contact@powerfolder.com
@@ -56,6 +56,10 @@ about.dialog_contributers_tab=team
 about.key=A
 about.name=Aiuto
 
+##aboutwebservice.description=Opens the WebService of the webservice in default browser
+##aboutwebservice.key=A
+##aboutwebservice.name=About WebService
+
 addfriend.description=Aggiungi un utente agli amici
 addfriend.key=A
 addfriend.name=Aggiungi agli amici
@@ -66,6 +70,10 @@ addmodifierfriend.name=Aggiungi chi ha modificato agli amici
 
 addressEditor.parseerror=<html>Si prega di inserire gli IP da considerare nella LAN, inputs validi sono\:<br>xxx.xxx.xxx.xxx o<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=Intervalli-IP
+
+##buypro.description=Upgrade to PowerFolder Pro now
+##buypro.key=B
+##buypro.name=Buy Pro
 
 chatpanel.cannot_deliver=il messaggio non pu\u00f2 essere consegnato perch\u00e8 '{0}' non \u00e8 connesso
 chatpanel.chat_with=Chat con
@@ -93,6 +101,8 @@ createshortcut.name=Crea un collegamento sul desktop
 delete_confimation.busy.description=Rimozione file(s)
 delete_confimation.busy.title=Cancellazione file(s)
 delete_confimation.text=Sei sicuro di voler cancellare i seguenti file\:\n\n{0}\nQuesti file saranno veramente cancellati dal sistema e non verranno spostati nel tuo "cestino".
+##delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
+##delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
 delete_confimation.text_movetorecyclebin=Sei sicuro di voler mettere i seguenti file(s) nel cestino di PowerFolder?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=Sei sicuro di voler mettere i seguenti file(s) eo directories (incluso le sottodirectories e i files) \nnelcestino di PowerFolder?
@@ -107,6 +117,7 @@ dialog.addmembertofriendlist.button.no_neveraskagain=No (Non chiederlo pi\u00f9)
 dialog.addmembertofriendlist.button.yes=Si
 dialog.addmembertofriendlist.explain=(Per aggiungere qualcuno alla tua lista di amici, devi dargli il permesso di modificare il\ncontenuto delle tue cartelle. Per esempio per aggiungere nuovi file. Puoi facilmente cambiare lo status\ndi amico di un membro usando il menu contestuale (click con il tasto destro del mouse)).
 dialog.addmembertofriendlist.question={0} si \u00e8 collegato ad una o pi\u00f9 cartelle\:\n\n{1}\nvuoi aggiungerlo alla tua lista di amici ora?
+##dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
 dialog.addmembertofriendlist.title=Aggiungi {0} alla lista degli amici
 dialog.alreadyrunning.exitbutton=Esci
 dialog.alreadyrunning.startbutton=Inizia comunque
@@ -131,6 +142,8 @@ dialog.updatecheck.developmentversion.optionrestart=Riavvia
 dialog.updatecheck.developmentversion.text=\nUna nuova versione di sviluppo di PowerFolder \u00e8 stata scaricata.\n\n"- Buildtimes -\nQuesta versione\: {0}\nNuova versione\: {1}\n\nOra riavvia PowerFolder.\n
 dialog.updatecheck.developmentversion.title=Nuova versione sviluppo
 dialog.updatecheck.downloadAndUpdate=Scarica e aggiorna ora
+##dialog.updatecheck.failed.text=Update failed. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+##dialog.updatecheck.failed.title=Update failed
 dialog.updatecheck.gotoHomepage=Vai all'homepage di PowerFolder
 dialog.updatecheck.noUpdateAvailable=Questa versione \u00e8 aggiornata
 dialog.updatecheck.nothingNeverAsk=Non chiedere pi\u00f9 nulla
@@ -235,7 +248,11 @@ folder.members.synchronisation_panel.local_size=Dimensione Locale
 folder.members.synchronisation_panel.title=Status sincronizzazione Membro
 
 foldercreate.description=Crea una nuova cartella condivisa
+##foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
+##foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=Salva un invito nella cartella
+##foldercreate.dialog.sendinvitation=Send invitations afterwards
 foldercreate.dialog.settings=Inserisci le impostazioni per la nuova cartella condivisa
 foldercreate.dialog.title=Condividi una nuova cartella
 foldercreate.dirempty.text=La directory base non dovrebbe essere vuota
@@ -270,12 +287,6 @@ folderjoin.secret=Segreta
 folderjoin.warning.notempty.text=La directory per la copia locale della cartella '{0}' non \u00e8 vuota.\nTutti i file contenuti al suo interno verranno trasferiti ai suoi membri.\nSei sicuro di mettere la copia locale di questa cartella a\n'{1}' ?
 folderjoin.warning.notempty.title=La directory base locale non \u00e8 vuota
 
-folderjoinleave.description=Raggiunge o lascia la cartella
-folderjoinleave.join=Raggiunge la cartella
-folderjoinleave.key=L
-folderjoinleave.leave=Lascia la cartella
-folderjoinleave.name=Raggiungi la cartella
-
 folderleave.description=Esci la cartella (Ferma la condivisione e il download dei dati)
 folderleave.dialog.sync_warning=La cartella si sta sincronizzando\!
 folderleave.dialog.text=Esci dalla cartella {0} ?
@@ -283,11 +294,16 @@ folderleave.dialog.title=Esci dalla cartella {0} ?
 folderleave.key=E
 folderleave.name=Esci dalla cartella
 
+##foldermove.progress.text=Moving folder '{0}'
+##foldermove.progress.title=Folder Move
+
 folderpanel.chattab.title=Chat
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Salta Tutti I Duplicati
 folderpanel.filestab.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 un file '{0}' si desidera sovrascrivere il file esistente?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Il file esiste
-folderpanel.hometab.folder_type=Tipo cartella
+##folderpanel.hometab.choose_local_folder.title=Choose local folder
+##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
+##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
 folderpanel.hometab.local_folder_location=percorso della cartella locale
 folderpanel.hometab.local_size=Dimensione locale
 folderpanel.hometab.number_of_available_files_at_other_members=Numero di file disponibili per gli altri membri
@@ -317,10 +333,19 @@ folderpanel.settingstab.removebutton.description=Rimuovi un pattern
 folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=Rimuovi
 folderpanel.settingstab.title=Impostazioni
+##folderpanel.settingstab.userecyclebin=Use recycle bin
 
 folderrepository.warnonclose.neveraskagain=Non chiederlo piu'.
 folderrepository.warnonclose.text=Queste cartelle non sono ancora sincronizzate\:\n\n\n\n{0}\n\n\nContinua Esci?
 folderrepository.warnonclose.title=Continua Esci?
+
+##freelimitdialog.buypro=Buy PowerFolder Pro
+##freelimitdialog.buyrecommendation=It is recommended that you upgrade to the Pro Version.
+##freelimitdialog.heavyusagedetected=PowerFolder has detected that you are heavily using PowerFolder.
+##freelimitdialog.ignore=Ignore
+##freelimitdialog.reason=Reason\: More than {0} Folders configured.
+##freelimitdialog.title=Heavy use detected
+##freelimitdialog.whatispro=Why should I upgrade to PowerFolder Pro?
 
 friendsearch.no_user_found=Nessun utente trovato
 friendsearch.nodetable.hostname=Hostname
@@ -335,6 +360,7 @@ friendspanel.n_a=n/a
 friendspanel.search_for_user=Ricerca per utente
 friendspanel.search_results=Risultati della ricerca
 
+##general.apply=Apply
 general.availability=Disponibilit\u00e0
 general.cancel=Cancella
 general.cancel.key=C     
@@ -379,6 +405,7 @@ general.today=oggi
 general.uploads=Uploads
 general.user=Utente
 general.visibility=Visibilit\u00e0
+##general.webservice=Online Storage
 general.yesterday=ieri
 
 hideoffline.description=Gli utenti offline saranno filtrati dal risultato di questa ricerca
@@ -403,6 +430,7 @@ join_by_invitation.name=Carica invito
 joinfolder.already_joined_text=Sei gi\u00e0 un membro della cartella {0}
 joinfolder.already_joined_title=Impossibile aggiungersi {0}
 
+##limitedconnection.dont_autodetect=No longer detect limited connectivity
 limitedconnection.text=PowerFolder ha rilevato una connettivit\u00e0 limitata sulla rete.\nQuesto potrebbe essere causato da un firewall, un router o dalla condivisione di una connessione su windows.\nPer sapere come aumentare la connettivit\u00e0 leggi le nostre FAQ.\nhttp\://www.powerfolder.com
 limitedconnection.title=Connettivit\u00e0 limitata
 
@@ -435,6 +463,10 @@ member.non_mutual_friend=Nessun amico reciproco
 member.onlan=Onlan
 member.supernode=Supernodo
 
+##mirrorfolder.description=Setup the WebService to backup a folder
+##mirrorfolder.key=B
+##mirrorfolder.name=Backup Folder
+
 mp3fileinfo.album=Album
 mp3fileinfo.artist=Artista
 mp3fileinfo.bitrate=Bitrate
@@ -451,6 +483,7 @@ myfolderstable.number_of_available_files=\# Disponibili
 myfolderstable.number_of_deleted_files=\# Cancellati
 myfolderstable.number_of_local_files=\# Locale
 myfolderstable.number_of_members={0} membri
+##myfolderstable.sync=Sync
 myfolderstable.sync_percetage=Sincronizzazione%
 myfolderstable.syncprofile=Profilo di sincronizzazione
 myfolderstable.total_size=Dimensione totale
@@ -510,6 +543,10 @@ openfile.description=Apri (Esegui) il file selezionato
 openfile.key=f
 openfile.name=Apri il file
 
+##openwebservice.description=Opens the WebService in the default browser
+##openwebservice.key=B
+##openwebservice.name=Open in Browser
+
 plugin_disable.description=Disabilita (e ferma) Plugin
 plugin_disable.key=D
 plugin_disable.name=Disabilita
@@ -536,12 +573,12 @@ preferences.dialog.bindDescr=Descrizione dell'interfaccia
 preferences.dialog.colortheme=Tema da utilizzare
 preferences.dialog.createdesktopshortcuts=Crea un collegamento sul desktop
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Chiedi di aggiungere agli amici se un nodo diventa membro di una cartella
+##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Finestre
 preferences.dialog.dialogs.warnoncloseifnotinsync=Avvisa alla chiusura di un programma se la cartella sta ancora effettuando la sincronizzazione
 preferences.dialog.dialogs.warnonlimitedconnectivity=Avvisa in caso di limitata connettivit\u00e0 (Nessuna connessione in ingresso)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Avvisa di possibili problemi sui nomi dei file (ad es. troppo lunghi per Apple classico)
 preferences.dialog.dyndns=Mio DNS (dinamico)
-preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Mantieni dyndns aggiornato
 preferences.dialog.dyndnsCurrentIP=IP Corrente
@@ -575,6 +612,8 @@ preferences.dialog.networkmode.private=LAN e Internet
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Abilita il trasferimento file sulla LAN e Internet.<BR>Attualmente connette solo ad amici, utenti sulla LAN e persone, che sono in cartelle condivise.<BR>Inoltre PowerFolder si connette a supernodi per trovare i tuoi amici su internet.</BODY></HTML>
 preferences.dialog.nickname=Nome utente
 preferences.dialog.nonwindowsinfo=Attenzione\: alcune impostazioni non sono disponibili su sistemi Windows
+##preferences.dialog.openport=Automatically open Windows Firewall
+##preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
 preferences.dialog.plugin.classname=Java classname
 preferences.dialog.plugin.description=Descrizione
 preferences.dialog.plugin.name=Nome
@@ -591,12 +630,15 @@ preferences.dialog.showpreviewpanel=Abilita anteprima interna delle immagini
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Puoi trovare l'anteprima dell'immagine in Mie Cartelle->Cartelle->Files->Dettagli<BR>(Questa funzioneoccupa molte risorse con grandi immagini jpg's (>500K), usare con cautela.)</BODY></HTML>
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
 preferences.dialog.silentthrottle.tooltip=Imposta limitazione di banda in modo silenzioso (funziona solo per limiti diversi da 0)
+##preferences.dialog.smalltoolbar=Use small toolbar icons
+##preferences.dialog.startwithwindows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: non pu\u00f2 essere risolto\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validazione ottenuta\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validazione fallita\!
 preferences.dialog.statusWaitDynDns=Attendi un attimo, DynDns {0} sta per essere convalidato\!
 preferences.dialog.title=Preferenze
 preferences.dialog.titleProcessing=elaborazione in corso...
+##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Usa Compressione ZIP sulla LAN 
 preferences.dialog.useziponlan.tooltip=Abilita se i file da trasferire sono facilmente comprimibili (questo pu\u00f2 appesantire il carico della tua CPU)
 preferences.dialog.warnningMessage=Attenzione
@@ -663,6 +705,11 @@ quickinfo.user.isconnectedinet=\u00c8 in Internet
 quickinfo.user.isconnectedlan=\u00c8 sulla LAN
 quickinfo.user.isdiconnected=\u00c8 disconnesso
 quickinfo.user.secureconnected=connesso in modo sicuro
+##quickinfo.webservice.connected=Connected to the PowerFolder WebService
+##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
+##quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
+##quickinfo.webservice.title=Online Storage - WebService
 
 reconnect.description=Riconnettiti a questo utente ora
 reconnect.key=r
@@ -771,6 +818,8 @@ synchronisation.warning.title=Attiva il profilo di sincronizzazione {0} per {1}
 
 syncprofile.autodownload_all.name=Auto-download (di ogni file)
 syncprofile.autodownload_friends.name=Auto-download (da amici)
+##syncprofile.backupsource.name=Backup (Source)
+##syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Personalizzato...
 syncprofile.leecher.name=Torrent downloader
 syncprofile.leechreleaser.name=Torrent releaser
@@ -813,6 +862,8 @@ unignorefile.description=Il/i file(s) saranno scaricati/condivisi nuovamente
 unignorefile.key=U
 unignorefile.name=Rimuovi da Ignora
 
+##winutils.shortcut.description=This shortcut was placed here by PowerFolder
+
 wizard.basicsetup.enternick=Inserisci il tuo nickname
 wizard.basicsetup.lanonly=solo LAN
 wizard.basicsetup.networking=Connetti a
@@ -852,6 +903,7 @@ wizard.projectsync.setupsync=Imposta la sincronizzazione di un progetto
 wizard.projectsync.successjoin=Sei entrato nel progetto\!
 wizard.projectsync.takepartsync=Prendi parte ad una sincronizzazione
 wizard.projectsync.title=Sincronizzazione di un progetto
+##wizard.sendinvitations.additionaltext=Additional Information
 wizard.sendinvitations.joinsync=I file di invito sono richiesti per accedere ad una sincronizzazione
 wizard.sendinvitations.neveruntrusted=Non dare mai i tuoi file di invito a persone non fidate
 wizard.sendinvitations.offline=Non connesso
@@ -876,6 +928,14 @@ wizard.syncpcspanel.selecttarget=Scegli una directory locale
 wizard.syncpcspanel.setup=Imposta una nuova sincronizzazione
 wizard.syncpcspanel.takepart=Prendi parte ad una sincronizzazione
 wizard.syncpcspanel.title=Sincronizza PC
+##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+##wizard.webservice.learnmore=What is the PowerFolder WebService?
+##wizard.webservice.login=Online Storage Login
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
+##wizard.webservice.mirrorsetup=Backup Folder by WebService
+##wizard.webservice.password=Password
+##wizard.webservice.register=Register new Account
+##wizard.webservice.username=Email
 wizard.whattodo.bordertext=Scegli la tua azione
 wizard.whattodo.filesharing=Condividi Files
 wizard.whattodo.openonlinedocumentation=Apri la documentazione online
