--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -7,7 +7,7 @@
 # Then remove the ## in front of the line.
 #
 # There is also a guide on our offical webpage under
-# http://www.powerfolder.com/?q=node/i18n
+# http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
 # contact@powerfolder.com
@@ -101,6 +101,8 @@ createshortcut.name=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 delete_confimation.busy.description=\u5220\u9664\u6587\u4ef6
 delete_confimation.busy.title=\u5220\u9664\u6587\u4ef6
 delete_confimation.text=\u4f60\u786e\u5b9a\u8981\u5220\u9664\u4e0b\u5217\u6587\u4ef6\uff1a\r\n\uff08\u6ce8\u610f\uff1a\u8fd9\u4e9b\u6587\u4ef6\u5c06\u88ab\u5f7b\u5e95\u5220\u9664\uff0c\u800c\u4e0d\u662f\u79fb\u5230\u56de\u6536\u7ad9\u3002\uff09
+##delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
+##delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
 delete_confimation.text_movetorecyclebin=\u4f60\u786e\u5b9a\u8981\u628a\u4e0b\u5217\u6587\u4ef6\u5220\u9664\u5230PowerFolder\u56de\u6536\u7ad9\uff1f
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=\u4f60\u786e\u5b9a\u8981\u628a\u4e0b\u5217\u6587\u4ef6/\u6587\u4ef6\u5939\uff08\u5305\u62ec\u5b50\u76ee\u5f55\u548c\u6587\u4ef6\uff09\u5220\u9664\u5230PowerFolder\u56de\u6536\u7ad9\uff1f
@@ -140,8 +142,8 @@ dialog.updatecheck.developmentversion.optionrestart=\u91cd\u542f
 dialog.updatecheck.developmentversion.text=\n\u5df2\u7ecf\u4e0b\u8f7dPowerFolder\u65b0\u7684\u5f00\u53d1\u7248\u672c\u3002\n\n - Buildtimes -\n\u5f53\u524d\u7248\u672c\: {0}\n\u65b0\u7248\u672c\: {1}\n\n\u8bf7\u7acb\u5373\u91cd\u65b0\u542f\u52a8PowerFolder\u3002\n
 dialog.updatecheck.developmentversion.title=\u65b0\u7684\u5f00\u53d1\u7248\u672c
 dialog.updatecheck.downloadAndUpdate=\u7acb\u5373\u4e0b\u8f7d\u5e76\u66f4\u65b0
-dialog.updatecheck.failed.title=\u5347\u7ea7\u5931\u8d25
 dialog.updatecheck.failed.text=\u5347\u7ea7\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u60a8\u7684\u7f51\u7edc\u8fde\u63a5\u3002\n \nPowerFolder \u4e13\u4e1a\u7248\uff1a\u8bf7\u540c\u65f6\u68c0\u67e5\u60a8\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/PowerFolder\u4e13\u4e1a\u7248\u52a0\u8f7d\u5668\u3002
+dialog.updatecheck.failed.title=\u5347\u7ea7\u5931\u8d25
 dialog.updatecheck.gotoHomepage=\u8bbf\u95ee PowerFolder \u4e3b\u9875
 dialog.updatecheck.noUpdateAvailable=\u76ee\u524d\u5df2\u7ecf\u662f\u6700\u65b0\u7248\u672c
 dialog.updatecheck.nothingNeverAsk=\u4e0d\u518d\u8be2\u95ee
@@ -246,6 +248,9 @@ folder.members.synchronisation_panel.local_size=\u672c\u5730\u5927\u5c0f
 folder.members.synchronisation_panel.title=\u6210\u5458\u540c\u6b65\u72b6\u6001
 
 foldercreate.description=\u521b\u5efa\u5171\u4eab
+##foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
+##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the folder
+##foldercreate.dialog.backuperror.title=Unable to backup folder
 foldercreate.dialog.saveinvitation=\u5728\u6587\u4ef6\u5939\u4fdd\u7559\u9080\u8bf7
 foldercreate.dialog.sendinvitation=\u4ee5\u540e\u53d1\u9001\u9080\u8bf7
 foldercreate.dialog.settings=\u8bbe\u7f6e\u65b0\u5171\u4eab
@@ -282,12 +287,6 @@ folderjoin.secret=\u79c1\u6709
 folderjoin.warning.notempty.text=\u6587\u4ef6\u5939 '{0}' \u672c\u5730\u526f\u672c\u7684\u76ee\u5f55\u975e\u7a7a\u3002\n\u6587\u4ef6\u5939\u4e0b\u7684\u6587\u4ef6\u5c06\u88ab\u4e0a\u4f20\u7ed9\u5176\u4ed6\u6210\u5458\u3002\n\u4f60\u786e\u5b9a\u8981\u628a\u6587\u4ef6\u5939\u7684\u672c\u5730\u526f\u672c\u653e\u5728\n'{1}' ?
 folderjoin.warning.notempty.title=\u672c\u5730\u6839\u76ee\u5f55\u975e\u7a7a
 
-folderjoinleave.description=\u52a0\u5165/\u79bb\u5f00\u6587\u4ef6\u5939
-folderjoinleave.join=\u52a0\u5165\u6587\u4ef6\u5939
-folderjoinleave.key=f
-folderjoinleave.leave=\u79bb\u5f00\u6587\u4ef6\u5939
-folderjoinleave.name=\u52a0\u5165\u6587\u4ef6\u5939
-
 folderleave.description=\u79bb\u5f00\u8be5\u6587\u4ef6\u5939\uff08\u505c\u6b62\u5171\u4eab\u548c\u4e0b\u8f7d\u6570\u636e\uff09
 folderleave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
 folderleave.dialog.text=\u79bb\u5f00\u6587\u4ef6\u5939 {0} ?
@@ -295,11 +294,16 @@ folderleave.dialog.title=\u79bb\u5f00\u6587\u4ef6\u5939 {0} ?
 folderleave.key=L
 folderleave.name=\u79bb\u5f00\u6587\u4ef6\u5939
 
+##foldermove.progress.text=Moving folder '{0}'
+##foldermove.progress.title=Folder Move
+
 folderpanel.chattab.title=\u804a\u5929
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=\u8df3\u8fc7\u5168\u90e8
 folderpanel.filestab.dropfile_duplicate_dialog.text=\u6b64\u6587\u4ef6\u5939\u5df2\u7ecf\u5305\u542b\u6587\u4ef6 '{0}' \u662f\u5426\u8986\u76d6\u539f\u6709\u6587\u4ef6?
 folderpanel.filestab.dropfile_duplicate_dialog.title=\u6587\u4ef6\u5df2\u7ecf\u5b58\u5728
-folderpanel.hometab.folder_type=\u6587\u4ef6\u5939\u7c7b\u578b
+##folderpanel.hometab.choose_local_folder.title=Choose local folder
+##folderpanel.hometab.confirm_local_folder_move.text=Move local folder from\n{0}\nto\n{1}?
+##folderpanel.hometab.confirm_local_folder_move.title=Move local folder
 folderpanel.hometab.local_folder_location=\u672c\u5730\u6587\u4ef6\u5939\u4f4d\u7f6e
 folderpanel.hometab.local_size=\u672c\u5730\u5927\u5c0f
 folderpanel.hometab.number_of_available_files_at_other_members=\u5176\u4ed6\u7528\u6237\u5904\u7684\u6709\u6548\u6587\u4ef6\u6570
@@ -329,13 +333,14 @@ folderpanel.settingstab.removebutton.description=\u5220\u9664\u6837\u5f0f
 folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=\u5220\u9664
 folderpanel.settingstab.title=\u8bbe\u7f6e
+##folderpanel.settingstab.userecyclebin=Use recycle bin
 
 folderrepository.warnonclose.neveraskagain=\u4e0d\u518d\u8be2\u95ee\u3002
 folderrepository.warnonclose.text=\u4ee5\u4e0b\u6587\u4ef6\u5939\u672a\u540c\u6b65\uff1a\n\n\n\n{0}\n\n\n\u7ee7\u7eed\u9000\u51fa\uff1f
 folderrepository.warnonclose.title=\u7ee7\u7eed\u9000\u51fa\uff1f
 
-freelimitdialog.buyrecommendation=\u63a8\u8350\u60a8\u5347\u7ea7\u5230\u4e13\u4e1a\u7248\u3002
 freelimitdialog.buypro=\u8d2d\u4e70PowerFolder\u4e13\u4e1a\u7248
+freelimitdialog.buyrecommendation=\u63a8\u8350\u60a8\u5347\u7ea7\u5230\u4e13\u4e1a\u7248\u3002
 freelimitdialog.heavyusagedetected=PowerFolder\u68c0\u6d4b\u5230\u60a8\u5927\u91cf\u4f7f\u7528PowerFolder.
 freelimitdialog.ignore=\u5ffd\u7565
 freelimitdialog.reason=\u539f\u56e0\uff1a\u8d85\u8fc7 {0}\u4e2a\u6587\u4ef6\u5939\u88ab\u914d\u7f6e\u3002
@@ -478,6 +483,7 @@ myfolderstable.number_of_available_files=\# \u6709\u6548
 myfolderstable.number_of_deleted_files=\# \u5220\u9664
 myfolderstable.number_of_local_files=\# \u672c\u5730
 myfolderstable.number_of_members={0} \u6210\u5458
+##myfolderstable.sync=Sync
 myfolderstable.sync_percetage=\u540c\u6b65\u7387%
 myfolderstable.syncprofile=\u540c\u6b65\u9009\u9879
 myfolderstable.total_size=\u603b\u5927\u5c0f
@@ -573,7 +579,6 @@ preferences.dialog.dialogs.warnoncloseifnotinsync=\u540c\u6b65\u65f6\u5173\u95ed
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u8fde\u63a5\u53d7\u9650\u65f6\u63d0\u793a(\u6ca1\u6709\u6536\u5230\u7684\u8fde\u63a5)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=\u5728\u6587\u4ef6\u540d\u53ef\u80fd\u51fa\u9519\u65f6\u63d0\u793a(\u5982\u592a\u957f\u7684\u6587\u4ef6\u540d)
 preferences.dialog.dyndns=\u52a8\u6001DNS
-preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=\u52a8\u6001DNS
 preferences.dialog.dyndnsAutoUpdate=\u4fdd\u5b58\u52a8\u6001DNS\u66f4\u65b0
 preferences.dialog.dyndnsCurrentIP=\u5f53\u524dIP
@@ -625,6 +630,7 @@ preferences.dialog.showpreviewpanel=\u542f\u7528\u5185\u90e8\u56fe\u7247\u9884\u
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u60a8\u53ef\u4ee5\u5728 \u6211\u7684\u6587\u4ef6\u5939->\u6587\u4ef6\u5939->\u6587\u4ef6->\u8be6\u7ec6 \u627e\u5230\u56fe\u7247\u9884\u89c8<BR>(\u6b64\u529f\u80fd\u5728\u4f7f\u7528\u5927\u56fe\u7247\u65f6\u5c06\u5927\u91cf\u5360\u7528\u5185\u5b58(>500K)\uff0c\u8c28\u614e\u4f7f\u7528\u3002)</BODY></HTML>
 preferences.dialog.silentthrottle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf 
 preferences.dialog.silentthrottle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
+##preferences.dialog.smalltoolbar=Use small toolbar icons
 preferences.dialog.startwithwindows=\u968fWindows\u542f\u52a8PowerFolder
 preferences.dialog.statusCantResolve=\u52a8\u6001Dns {0}\uff1a\u4e0d\u80fd\u89e3\u6790\uff01
 preferences.dialog.statusDynDnsSuccess=\u52a8\u6001Dns {0} \u9a8c\u8bc1\u6210\u529f\uff01
@@ -632,6 +638,7 @@ preferences.dialog.statusValidFailed=DynDns {0}\uff1a\u9a8c\u8bc1\u5931\u8d25\uf
 preferences.dialog.statusWaitDynDns=\u7a0d\u7b49\uff0c\u52a8\u6001Dns {0} \u6b63\u5728\u9a8c\u8bc1\uff01
 preferences.dialog.title=\u8bbe\u7f6e
 preferences.dialog.titleProcessing=\u5904\u7406\u4e2d\u2026\u2026
+##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528ZIP\u538b\u7f29 
 preferences.dialog.useziponlan.tooltip=\u5728\u4f20\u8f93\u7684\u6587\u4ef6\u5bb9\u6613\u538b\u7f29\u65f6\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
 preferences.dialog.warnningMessage=\u8b66\u544a
@@ -699,7 +706,7 @@ quickinfo.user.isconnectedlan=\u5c40\u57df\u7f51
 quickinfo.user.isdiconnected=\u672a\u8fde\u63a5
 quickinfo.user.secureconnected=\u5b89\u5168\u8fde\u63a5
 quickinfo.webservice.connected=\u8fde\u63a5\u5230PowerFolder\u7f51\u7edc\u670d\u52a1
-quickinfo.webservice.foldersmirrored= {1}\u4e2a \u6587\u4ef6\u5939\u7684{0}\u4e2a\u88ab\u5907\u4efd
+quickinfo.webservice.foldersmirrored={1}\u4e2a \u6587\u4ef6\u5939\u7684{0}\u4e2a\u88ab\u5907\u4efd
 quickinfo.webservice.notconnected=\u65ad\u5f00PowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.notsetup=\u8fd8\u6ca1\u6709\u914d\u7f6ePowerFolder\u7f51\u7edc\u670d\u52a1
 quickinfo.webservice.title=\u5728\u7ebf\u5b58\u50a8 - \u7f51\u7edc\u670d\u52a1
@@ -921,22 +928,17 @@ wizard.syncpcspanel.selecttarget=\u8bf7\u9009\u62e9\u672c\u5730\u76ee\u6807\u658
 wizard.syncpcspanel.setup=\u8bbe\u7f6e\u65b0\u7684\u540c\u6b65
 wizard.syncpcspanel.takepart=\u52a0\u5165\u540c\u6b65
 wizard.syncpcspanel.title=\u540c\u6b65\u7535\u8111
+wizard.webservice.enteraccount=\u8f93\u5165\u60a8\u7684\u8d26\u53f7\u6765\u767b\u5f55\u7f51\u7edc\u670d\u52a1
+wizard.webservice.learnmore=\u4ec0\u4e48\u662fPowerFolder\u7f51\u7edc\u670d\u52a1?
+wizard.webservice.login=\u767b\u5f55\u5728\u7ebf\u5b58\u50a8
+wizard.webservice.mirrorchoosefolder=\u9009\u62e9\u8981\u7528PowerFolder\u5907\u4efd\u7684\u6587\u4ef6\u5939
+wizard.webservice.mirrorsetup=\u7528\u7f51\u7edc\u670d\u52a1\u5907\u4efd\u6587\u4ef6\u5939
+wizard.webservice.password=\u5bc6\u7801
+wizard.webservice.register=\u6ce8\u518c\u65b0\u8d26\u53f7
+wizard.webservice.username=Email
 wizard.whattodo.bordertext=\u9009\u62e9\u4f60\u8981\u505a\u7684\u4e8b\u60c5
 wizard.whattodo.filesharing=\u540c\u6b65\u6587\u4ef6
 wizard.whattodo.openonlinedocumentation=\u6253\u5f00\u5728\u7ebf\u6587\u6863
 wizard.whattodo.projectwork=\u540c\u6b65\u9879\u76ee
 wizard.whattodo.syncpcs=\u540c\u6b65\u7535\u8111
 wizard.whattodo.title=\u4f60\u60f3\u505a\u4ec0\u4e48\uff1f
-
-wizard.webservice.learnmore=\u4ec0\u4e48\u662fPowerFolder\u7f51\u7edc\u670d\u52a1?
-
-wizard.webservice.enteraccount=\u8f93\u5165\u60a8\u7684\u8d26\u53f7\u6765\u767b\u5f55\u7f51\u7edc\u670d\u52a1
-wizard.webservice.login=\u767b\u5f55\u5728\u7ebf\u5b58\u50a8
-wizard.webservice.password=\u5bc6\u7801
-wizard.webservice.register=\u6ce8\u518c\u65b0\u8d26\u53f7
-wizard.webservice.username=Email
-
-wizard.webservice.mirrorsetup=\u7528\u7f51\u7edc\u670d\u52a1\u5907\u4efd\u6587\u4ef6\u5939
-wizard.webservice.mirrorchoosefolder=\u9009\u62e9\u8981\u7528PowerFolder\u5907\u4efd\u7684\u6587\u4ef6\u5939
-
-
