Added "hashing" notification for uploads/downloads

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -933,3 +933,5 @@ wizard.whattodo.filesharing=Filesharing
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
 wizard.whattodo.projectwork=Projekt Synchronisation
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
+
+transfers.hashing=Berechne Hashes
