--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -340,12 +340,17 @@ folderrepository.warnonclose.text=Diese Folder sind noch nicht vollst\u00e4ndig 
 folderrepository.warnonclose.title=Wirklich Beenden?
 
 freelimitdialog.buypro=PowerFolder Pro kaufen
-freelimitdialog.buyrecommendation=Es is ratsam auf PowerFolder Pro umzusteigen.
+freelimitdialog.buyrecommendation=Es is notwendig auf PowerFolder Pro umzusteigen oder die Nutzung zu verringern.
+freelimitdialog.buyrecommendation2=PowerFolder ist solange deaktiviert.
+freelimitdialog.buyrecommendation3=Helfen Sie uns durch den Kauf von PowerFolder Pro!
 freelimitdialog.heavyusagedetected=PowerFolder hat erkannt, da\u00df Sie das Programm intensiv nutzen.
-freelimitdialog.ignore=Ignorieren
-freelimitdialog.reason=Grund\: Es sind mehr als {0} Folder eingerichtet.
+freelimitdialog.reduce=Nutzung verringern
+freelimitdialog.reason=Grund\: Es sind mehr als {0} Folder oder {0} GB daten eingerichtet.
 freelimitdialog.title=Intensive Nutzung erkannt
 freelimitdialog.whatispro=Warum sollte ich PowerFolder Pro kaufen?
+
+onlinelabel.disabled=Deaktiviert (Intensive Nutzung erkannt)
+onlinelabel.disabled.text=PowerFolder arbeitet derzeit nicht, da eine intensive Nutzung des Programms erkannt wurde.
 
 friendsearch.no_user_found=Keine Benutzer gefunden
 friendsearch.nodetable.hostname=Hostname
